--- a/style.css
+++ b/style.css
@@ -200,8 +200,7 @@ header nav.navigation .nav-link:hover::after {
 
 .intro {
   max-height: 900px;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url(./images/Rectangle.png);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(./images/Rectangle.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -1099,11 +1098,7 @@ header nav.navigation .nav-link:hover::after {
     margin-bottom: 30px;
   }
 }
-.about-us
-  .about-us__wrapper
-  .about-us__info
-  .about-us__more
-  .about-us__more-link {
+.about-us .about-us__wrapper .about-us__info .about-us__more .about-us__more-link {
   font-size: 16px;
   line-height: 20px;
   font-weight: 500;
@@ -1111,51 +1106,31 @@ header nav.navigation .nav-link:hover::after {
   text-decoration: underline;
 }
 @media screen and (max-width: 1280px) {
-  .about-us
-    .about-us__wrapper
-    .about-us__info
-    .about-us__more
-    .about-us__more-link {
+  .about-us .about-us__wrapper .about-us__info .about-us__more .about-us__more-link {
     font-size: 15px;
     line-height: 18px;
   }
 }
 @media screen and (max-width: 1024px) {
-  .about-us
-    .about-us__wrapper
-    .about-us__info
-    .about-us__more
-    .about-us__more-link {
+  .about-us .about-us__wrapper .about-us__info .about-us__more .about-us__more-link {
     font-size: 12px;
     line-height: 14px;
   }
 }
 @media screen and (max-width: 768px) {
-  .about-us
-    .about-us__wrapper
-    .about-us__info
-    .about-us__more
-    .about-us__more-link {
+  .about-us .about-us__wrapper .about-us__info .about-us__more .about-us__more-link {
     font-size: 9px;
     line-height: 11px;
   }
 }
 @media screen and (max-width: 640px) {
-  .about-us
-    .about-us__wrapper
-    .about-us__info
-    .about-us__more
-    .about-us__more-link {
+  .about-us .about-us__wrapper .about-us__info .about-us__more .about-us__more-link {
     font-size: 7px;
     line-height: 9px;
   }
 }
 @media screen and (max-width: 400px) {
-  .about-us
-    .about-us__wrapper
-    .about-us__info
-    .about-us__more
-    .about-us__more-link {
+  .about-us .about-us__wrapper .about-us__info .about-us__more .about-us__more-link {
     font-size: 5.3333333333px;
     line-height: 8px;
   }
@@ -1269,10 +1244,7 @@ header nav.navigation .nav-link:hover::after {
   margin-bottom: 70px;
 }
 @media screen and (min-width: 1281px) {
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item:nth-child(5n) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item:nth-child(5n) {
     width: 104px;
   }
 }
@@ -1281,10 +1253,7 @@ header nav.navigation .nav-link:hover::after {
     width: calc(100% / 5);
     margin-bottom: 58px;
   }
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item:nth-child(5n) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item:nth-child(5n) {
     width: 94px;
   }
 }
@@ -1293,16 +1262,10 @@ header nav.navigation .nav-link:hover::after {
     width: calc(100% / 3 + 20px);
     margin-bottom: 47px;
   }
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item:nth-child(3n) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item:nth-child(3n) {
     width: 84px;
   }
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item:nth-child(5n) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item:nth-child(5n) {
     width: calc(100% / 3 + 20px);
   }
 }
@@ -1311,10 +1274,7 @@ header nav.navigation .nav-link:hover::after {
     width: calc(100% / 3 + 20px);
     margin-bottom: 35px;
   }
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item:nth-child(3n) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item:nth-child(3n) {
     width: 64px;
   }
 }
@@ -1323,26 +1283,15 @@ header nav.navigation .nav-link:hover::after {
     width: calc(100% / 3 + 15px);
     margin-bottom: 35px;
   }
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item:nth-child(3n) {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item:nth-child(3n) {
     width: 44px;
   }
 }
-.about-us
-  .projects-wrapper
-  .about-us__projects-list
-  .projects__item
-  .item__info {
+.about-us .projects-wrapper .about-us__projects-list .projects__item .item__info {
   font-size: 36px;
   padding-left: 50px;
 }
-.about-us
-  .projects-wrapper
-  .about-us__projects-list
-  .projects__item
-  .item__info::before {
+.about-us .projects-wrapper .about-us__projects-list .projects__item .item__info::before {
   content: "";
   position: absolute;
   background-image: url(./images/projects-item__image.png);
@@ -1353,11 +1302,7 @@ header nav.navigation .nav-link:hover::after {
   top: 9px;
 }
 @media screen and (max-width: 1280px) {
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item
-    .item__info::before {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info::before {
     background-size: 28px;
     width: 28px;
     height: 28px;
@@ -1365,11 +1310,7 @@ header nav.navigation .nav-link:hover::after {
   }
 }
 @media screen and (max-width: 1024px) {
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item
-    .item__info::before {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info::before {
     width: 22px;
     height: 22px;
     background-size: 22px;
@@ -1377,11 +1318,7 @@ header nav.navigation .nav-link:hover::after {
   }
 }
 @media screen and (max-width: 768px) {
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item
-    .item__info::before {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info::before {
     width: 16px;
     height: 16px;
     background-size: 16px;
@@ -1389,11 +1326,7 @@ header nav.navigation .nav-link:hover::after {
   }
 }
 @media screen and (max-width: 640px) {
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item
-    .item__info::before {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info::before {
     width: 13px;
     height: 13px;
     background-size: 13px;
@@ -1401,11 +1334,7 @@ header nav.navigation .nav-link:hover::after {
   }
 }
 @media screen and (max-width: 400px) {
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item
-    .item__info::before {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info::before {
     width: 10px;
     height: 10px;
     background-size: 10px;
@@ -1413,101 +1342,61 @@ header nav.navigation .nav-link:hover::after {
   }
 }
 @media screen and (max-width: 1280px) {
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item
-    .item__info {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info {
     font-size: 34px;
     padding-left: 45px;
   }
 }
 @media screen and (max-width: 1024px) {
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item
-    .item__info {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info {
     font-size: 27px;
     padding-left: 35px;
   }
 }
 @media screen and (max-width: 768px) {
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item
-    .item__info {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info {
     font-size: 20px;
     padding-left: 26px;
   }
 }
 @media screen and (max-width: 640px) {
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item
-    .item__info {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info {
     font-size: 16px;
     padding-left: 20px;
   }
 }
 @media screen and (max-width: 400px) {
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item
-    .item__info {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__info {
     font-size: 12px;
     padding-left: 15px;
   }
 }
-.about-us
-  .projects-wrapper
-  .about-us__projects-list
-  .projects__item
-  .item__slogan {
+.about-us .projects-wrapper .about-us__projects-list .projects__item .item__slogan {
   font-size: 16px;
   font-weight: 400;
   line-height: 25px;
   color: #999999;
 }
 @media screen and (max-width: 1280px) {
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item
-    .item__slogan {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__slogan {
     font-size: 15px;
     line-height: 23px;
   }
 }
 @media screen and (max-width: 1024px) {
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item
-    .item__slogan {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__slogan {
     font-size: 12px;
     line-height: 18.75px;
   }
 }
 @media screen and (max-width: 768px) {
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item
-    .item__slogan {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__slogan {
     font-size: 9px;
     line-height: 14px;
   }
 }
 @media screen and (max-width: 640px) {
-  .about-us
-    .projects-wrapper
-    .about-us__projects-list
-    .projects__item
-    .item__slogan {
+  .about-us .projects-wrapper .about-us__projects-list .projects__item .item__slogan {
     font-size: 6px;
     line-height: 11px;
   }
@@ -1865,77 +1754,49 @@ header nav.navigation .nav-link:hover::after {
   margin-bottom: 30px;
 }
 @media screen and (max-width: 1280px) {
-  .all-services
-    .all-services__list
-    .all-services__item
-    .all-services__subtitle {
+  .all-services .all-services__list .all-services__item .all-services__subtitle {
     font-size: 15px;
     line-height: 18px;
   }
 }
 @media screen and (max-width: 1024px) {
-  .all-services
-    .all-services__list
-    .all-services__item
-    .all-services__subtitle {
+  .all-services .all-services__list .all-services__item .all-services__subtitle {
     font-size: 13px;
     line-height: 16px;
   }
 }
 @media screen and (max-width: 768px) {
-  .all-services
-    .all-services__list
-    .all-services__item
-    .all-services__subtitle {
+  .all-services .all-services__list .all-services__item .all-services__subtitle {
     font-size: 10px;
     line-height: 12px;
   }
 }
 @media screen and (max-width: 640px) {
-  .all-services
-    .all-services__list
-    .all-services__item
-    .all-services__subtitle {
+  .all-services .all-services__list .all-services__item .all-services__subtitle {
     font-size: 8px;
     line-height: 10px;
   }
 }
-.all-services
-  .all-services__list
-  .all-services__item
-  .all-services__subtitle
-  span {
+.all-services .all-services__list .all-services__item .all-services__subtitle span {
   color: #4985ff;
 }
 @media screen and (max-width: 1280px) {
-  .all-services
-    .all-services__list
-    .all-services__item
-    .all-services__subtitle {
+  .all-services .all-services__list .all-services__item .all-services__subtitle {
     margin-bottom: 25px;
   }
 }
 @media screen and (max-width: 1024px) {
-  .all-services
-    .all-services__list
-    .all-services__item
-    .all-services__subtitle {
+  .all-services .all-services__list .all-services__item .all-services__subtitle {
     margin-bottom: 20px;
   }
 }
 @media screen and (max-width: 768px) {
-  .all-services
-    .all-services__list
-    .all-services__item
-    .all-services__subtitle {
+  .all-services .all-services__list .all-services__item .all-services__subtitle {
     margin-bottom: 15px;
   }
 }
 @media screen and (max-width: 400px) {
-  .all-services
-    .all-services__list
-    .all-services__item
-    .all-services__subtitle {
+  .all-services .all-services__list .all-services__item .all-services__subtitle {
     margin-bottom: 10px;
   }
 }
@@ -2291,6 +2152,7 @@ header nav.navigation .nav-link:hover::after {
   border-radius: 30px;
   border: none;
   margin-bottom: 130px;
+  margin-bottom: 45px;
 }
 @media screen and (max-width: 1280px) {
   .all-projects .all-projects__wrapper .all-projects__more {
@@ -2342,18 +2204,11 @@ header nav.navigation .nav-link:hover::after {
     margin-bottom: 65px;
   }
 }
-@media screen and (max-width: 400px) {
-  .all-projects .all-projects__wrapper .all-projects__more {
-    margin-bottom: 45px;
-  }
-}
-
 .video {
   display: flex;
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
-  height: 1110px;
   position: relative;
 }
 .video::before {
@@ -2361,15 +2216,30 @@ header nav.navigation .nav-link:hover::after {
   position: absolute;
   height: 570px;
   width: 100%;
-  background: linear-gradient(
-      0deg,
-      rgba(255, 255, 255, 0.15),
-      rgba(255, 255, 255, 0.15)
-    ),
-    url(./images/video__background.png);
-  background-repeat: round;
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), url(./images/video__background.png);
+  background-size: cover;
   top: 0;
   z-index: -1;
+}
+@media screen and (max-width: 1280px) {
+  .video::before {
+    height: 475px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .video::before {
+    height: 380px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .video::before {
+    height: 285px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .video::before {
+    height: 190px;
+  }
 }
 .video .video__wrapper {
   width: 1110px;
@@ -2405,6 +2275,30 @@ header nav.navigation .nav-link:hover::after {
 @media screen and (max-width: 400px) {
   .video .video__wrapper {
     width: 300px;
+  }
+}
+@media screen and (max-width: 1280px) {
+  .video .video__wrapper {
+    margin-top: 55px;
+    margin-bottom: 70px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .video .video__wrapper {
+    margin-top: 45px;
+    margin-bottom: 55px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .video .video__wrapper {
+    margin-top: 35px;
+    margin-bottom: 40px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .video .video__wrapper {
+    margin-top: 20px;
+    margin-bottom: 25px;
   }
 }
 .video .video__slogan {
@@ -2445,6 +2339,26 @@ header nav.navigation .nav-link:hover::after {
     line-height: 27px;
   }
 }
+@media screen and (max-width: 1280px) {
+  .video .video__slogan {
+    margin-bottom: 25px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .video .video__slogan {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .video .video__slogan {
+    margin-bottom: 15px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .video .video__slogan {
+    margin-bottom: 10px;
+  }
+}
 .video .video__text {
   font-size: 16px;
   font-weight: 400;
@@ -2477,6 +2391,26 @@ header nav.navigation .nav-link:hover::after {
     line-height: 11px;
   }
 }
+@media screen and (max-width: 1280px) {
+  .video .video__text {
+    margin-bottom: 40px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .video .video__text {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .video .video__text {
+    margin-bottom: 25px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .video .video__text {
+    margin-bottom: 15px;
+  }
+}
 .video .video__content {
   position: relative;
   width: 970px;
@@ -2485,6 +2419,39 @@ header nav.navigation .nav-link:hover::after {
   background-size: cover;
   border-radius: 10px;
   margin-bottom: 85px;
+}
+@media screen and (max-width: 1280px) {
+  .video .video__content {
+    width: 805px;
+    height: 355px;
+    margin-bottom: 70px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .video .video__content {
+    width: 645px;
+    height: 285px;
+    margin-bottom: 55px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .video .video__content {
+    width: 450px;
+    height: 215px;
+    margin-bottom: 40px;
+  }
+}
+@media screen and (max-width: 640px) {
+  .video .video__content {
+    width: 360px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .video .video__content {
+    width: 325px;
+    height: 140px;
+    margin-bottom: 25px;
+  }
 }
 .video .video__content .video__button {
   position: relative;
@@ -2501,7 +2468,7 @@ header nav.navigation .nav-link:hover::after {
   background: transparent;
   border: 1px solid #ffffff;
   border-radius: 200px;
-  padding: 41px 29px 40px 121px;
+  padding: 40px 30px 40px 120px;
 }
 @media screen and (max-width: 1280px) {
   .video .video__content .video__button {
@@ -2527,14 +2494,83 @@ header nav.navigation .nav-link:hover::after {
     line-height: 11px;
   }
 }
+@media screen and (max-width: 1280px) {
+  .video .video__content .video__button {
+    width: 250px;
+    height: 80px;
+    top: calc(50% - 30px);
+    left: calc(50% - 125px);
+    padding: 30px 20px 30px 95px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .video .video__content .video__button {
+    width: 200px;
+    height: 65px;
+    top: calc(50% - 25px);
+    left: calc(50% - 100px);
+    padding: 25px 15px 25px 75px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .video .video__content .video__button {
+    width: 150px;
+    height: 50px;
+    top: calc(50% - 20px);
+    left: calc(50% - 75px);
+    padding: 20px 10px 20px 55px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .video .video__content .video__button {
+    width: 100px;
+    height: 30px;
+    top: calc(50% - 10px);
+    left: calc(50% - 50px);
+    padding: 10px 5px 10px 35px;
+  }
+}
 .video .video__content .video__button::before {
   content: "";
   background-image: url(./images/video__play-button.png);
+  background-size: cover;
   width: 60px;
   height: 60px;
   position: absolute;
   top: 20px;
   left: 40px;
+}
+@media screen and (max-width: 1280px) {
+  .video .video__content .video__button::before {
+    width: 50px;
+    height: 50px;
+    top: 17px;
+    left: 33px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .video .video__content .video__button::before {
+    width: 40px;
+    height: 40px;
+    top: 13px;
+    left: 27px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .video .video__content .video__button::before {
+    width: 30px;
+    height: 30px;
+    top: 10px;
+    left: 20px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .video .video__content .video__button::before {
+    width: 20px;
+    height: 20px;
+    top: 3px;
+    left: 13px;
+  }
 }
 .video .subscribe {
   width: 1110px;
@@ -2543,7 +2579,6 @@ header nav.navigation .nav-link:hover::after {
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
-  height: 177px;
 }
 @media screen and (max-width: 1280px) {
   .video .subscribe {
@@ -2648,7 +2683,7 @@ header nav.navigation .nav-link:hover::after {
   justify-content: flex-start;
   flex-direction: row;
 }
-.video .subscribe .subscribe__form input[type="email"] {
+.video .subscribe .subscribe__form input[type=email] {
   width: 299px;
   height: 45px;
   font-size: 13px;
